        to edje_object_text_markup_filter_callback_{add,del,del_full}.

2012-02-24  Jihoon Kim

	* add edje_object_part_text_imf_context_get for getting Ecore_IMF_Context handle in edje text object

2012-02-29  Tom Hacohen (TAsn)

	* Entry: Added edje_object_part_text_user_insert.
	This function inserts text as if the user has inserted it.
	This means it actually registers as a change and etc.

2012-03-06  Mikael Sans (XHeLL)

	* Entry: Added double click and triple click.
	Double click selects a word.
	Triple click selects a line.

2012-03-07  Tom Hacohen (TAsn)

	* Entry: Replaced edje_object_part_text_style_user_set/get 
	with edje_object_part_text_style_user_set/get to correspond to
	textblock's recent changes.

2012-03-07  Cedric Bail

	* Correctly count and propagate preload signal with GROUP.
	* Fix rotation with fixed point.

2012-03-11  Cedric Bail

	* Propagate scale factor to GROUP's part.

2012-03-12  Cedric Bail

	* Make it possible for edje to update size hint automatically.
	* Add min: SOURCE to GROUP's part.

2012-03-30  Jihoon Kim

	* Fix number doesn't insert even though NUM LOCK is locked.

2012-04-16  Carsten Haitzler (The Rasterman)

        * Add EDJE_VERSION_12 define so edc files can #ifdef compile
        right.

2012-04-20  Carsten Haitzler (The Rasterman)

        * To work through a bug in Elementary, add
        edje_object_part_text_escaped_set() that converts escapes to
        plain UTF8 if the part is TEXT.

2012-04-26 Carsten Haitzler (The Rasterman)

        1.2.0 release

2012-04-30  Jérôme Pinot

	* Add missing files in the tarballs.

2012-05-02  Cedric Bail

	* Doing less allocation and reuse Evas_Map does help.

2012-05-08  Cedric Bail

	* Add edje_watch tools to automatically rebuild edc.

2012-05-09  Cedric Bail

	* Fix bug in case of nesting edje_object_signal_emit and edje_object_signal_callback_{add,del}
	* Check that the file changed on disk when trying to reopen it.
