@@ -50,6 +50,14 @@ edje_init(void)
 	goto shutdown_embryo;
      }
 
+#ifdef HAVE_EIO
+   if (!eio_init())
+     {
+        ERR("Eio init failed");
+        goto shutdown_eet;
+     }
+#endif
+
    _edje_scale = FROM_DOUBLE(1.0);
 
    _edje_edd_init();
@@ -66,7 +74,7 @@ edje_init(void)
    if (!_edje_real_part_mp)
      {
 	ERR("Mempool for Edje_Real_Part cannot be allocated.");
-	goto shutdown_eet;
+	goto shutdown_all;
      }
 
    _edje_real_part_state_mp = eina_mempool_add("chained_mempool",
@@ -75,12 +83,12 @@ edje_init(void)
    if (!_edje_real_part_state_mp)
      {
 	ERR("Mempool for Edje_Real_Part_State cannot be allocated.");
-	goto shutdown_eet;
+	goto shutdown_all;
      }
 
    return _edje_init_count;
 
- shutdown_eet:
+ shutdown_all:
    eina_mempool_del(_edje_real_part_state_mp);
    eina_mempool_del(_edje_real_part_mp);
    _edje_real_part_state_mp = NULL;
@@ -92,6 +100,10 @@ edje_init(void)
    _edje_text_class_members_free();
    _edje_text_class_hash_free();
    _edje_edd_shutdown();
+#ifdef HAVE_EIO
+   eio_shutdown();
+ shutdown_eet:
+#endif
    eet_shutdown();
  shutdown_embryo:
    embryo_shutdown();
@@ -130,6 +142,9 @@ _edje_shutdown_core(void)
    _edje_text_class_hash_free();
    _edje_edd_shutdown();
 
+#ifdef HAVE_EIO
+   eio_shutdown();
+#endif
    eet_shutdown();
    embryo_shutdown();
    ecore_shutdown();
