@@ -7,6 +7,7 @@ AM_CPPFLAGS = \
 -DPACKAGE_LIB_DIR=\"$(libdir)/remix\" \
 -DPACKAGE_DATA_DIR=\"$(datadir)/remix\" \
 @EDJE_CFLAGS@ \
+@EIO_CFLAGS@ \
 @REMIX_CFLAGS@
 
 pkgdir = $(REMIX_PLUGIN_DIR)
